...
        [[UIBarButtonItem alloc]
         initWithImage:settingsImage
         style:UIBarButtonItemStylePlain
         target:self
         action:@selector(openSettingsController)];
    
    self.title = @"Watch Frame";
    self.navigationItem.leftBarButtonItem = settingsBarButtonItem;
    
    [self setupView];
    
}

...
    UIButton *saveImageButton = [UIButton buttonWithType:UIButtonTypeCustom];
    
    saveImageButton.frame = CGRectMake(saveImageButtonX, saveImageButtonY, saveImageButtonWidth, saveImageButtonHeight);
    saveImageButton.layer.cornerRadius = 4;
    saveImageButton.layer.masksToBounds = YES;
    [saveImageButton setBackgroundImage:buttonsBackgroundImage forState:UIControlStateNormal];
    [saveImageButton setTitle:@"Save Image" forState:UIControlStateNormal];
    [saveImageButton addTarget:self action:@selector(saveImageToCameraRoll) forControlEvents:UIControlEventTouchUpInside];
    
    [self.view addSubview:saveImageButton];
    
    // Keep references.
    
...
